--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv-load": "^2.0.0",
+    "framer-motion": "^5.5.7",
     "next": "12.0.8",
+    "next-connect": "^0.11.0",
+    "next-env": "^1.1.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "eslint": "8.6.0",
